--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,11 +4,9 @@
 </head>
 <body>
     <!-- ========== FOOTER ========== -->
-    <footer class="bg-dark">
-        <div class="container">
-
+    <footer class="bg-dark"  >
+        <div class="container ">
             <hr class="opacity-xs my-0">
-
             <div class="space-1">
                 <div class="row align-items-md-center mb-7">
                     <div class="col-md-6 mb-4 mb-md-0">
@@ -17,17 +15,16 @@
 <!--                            <li class="nav-item">-->
 <!--                                <a class="nav-link" href="#">Privacy &amp; Policy</a>-->
 <!--                            </li>-->
+<!--                            <li class="nav-item opacity mx-3">&#47;</li>-->
+
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/terms}">Terms</a>
+                            </li>
+
                             <li class="nav-item opacity mx-3">&#47;</li>
                             <li class="nav-item">
-<!--                                <a class="nav-link" href="termsandconditions.html">Terms</a>-->
-<!--                                <a class="nav-link" href="../termsandconditions.html">Terms2</a>-->
-
-                                <a th:href="@{/terms}"></a></td>
+                                <a class="nav-link" th:href="@{/privacypolicy}">Privacy Policy</a>
                             </li>
-                            <li class="nav-item opacity mx-3">&#47;</li>
-<!--                            <li class="nav-item">-->
-<!--                                <a class="nav-link" href="#">Site Map</a>-->
-<!--                            </li>-->
                         </ul>
                         <!-- End Nav Link -->
                     </div>
@@ -36,7 +33,7 @@
 
                 <!-- Copyright -->
                 <div class="w-md-75 text-lg-center mx-lg-auto">
-                    <p class="text-white opacity-sm small">&copy; Front. 2020 Htmlstream. All rights reserved.</p>
+                    <p class="text-white opacity-sm small">&copy; 2021 Robin Dobra. All rights reserved.</p>
                     <p class="text-white opacity-sm small">Free of Ads.</p>
                     <p class="text-white opacity-sm small">Free of Cookies.</p>
                     <p class="text-white opacity-sm small">Free of Tracking.</p>
