--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -146,8 +146,8 @@
             <!-- Nav -->
             <nav class="js-mega-menu navbar navbar-expand-lg">
                 <!-- Logo -->
-                <a class="navbar-brand" href="./index.html" aria-label="Front">
-                    <img src="../svg/logos/logo.svg" alt="Logo">
+                <a class="navbar-brand" href="/" aria-label="Front">
+                    <img src="../svg/logos/456.svg" alt="Logo">
                 </a>
                 <!-- End Logo -->
 
@@ -184,7 +184,6 @@
                                 <form action="https://www.paypal.com/donate" method="post" target="_top">
                                     <input type="hidden" name="hosted_button_id" value="4CZVWE8E25KDQ" />
                                     <input type="image" src="../paypal/button-PayPal-donate.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" width="30%" height="30%" />
-                                    <img alt="" border="0" />
                                 </form>
                                 </div>
                                 <!-- End of PayPal Donate Button -->
