--- a/src/main/resources/templates/fragments/imageList.html
+++ b/src/main/resources/templates/fragments/imageList.html
@@ -8,13 +8,13 @@
 <div th:insert="fragments/javascriptImports"></div>
 
 <main id="content" role="main">
-    <div class="container space-top-3 space-top-lg-4 space-bottom-2 space-bottom-lg-3">
+    <div class="container space-top-3 space-top-lg-4 space-bottom-2 space-bottom-lg-3" style="padding-top: 5rem!important">
         <!-- Hero -->
         <div class="text-center mb-5 mb-md-9">
             <h1 class="display-4 mb-0">
                   <span class="js-text-animation"
                         data-hs-typed-options='{
-                          "strings": ["www.imagesforfree.com", "Free HD Images"],
+                          "strings": ["www.pixelheaven.org", "Free HD Images", "No Ads.", "No Tracker.", "No Cookies."],
                           "typeSpeed": 100,
                           "loop": true,
                           "backSpeed": 50,
@@ -153,9 +153,6 @@
 <link rel="stylesheet" href="../css/customCSS.css">
 
 <script>
-
-
-
 
     $(document).ready(function () {
         $(document).on('click', 'a.cbp-filter-item-active', function (e) {
