--- a/src/main/resources/templates/fragments/javascriptImports.html
+++ b/src/main/resources/templates/fragments/javascriptImports.html
@@ -31,13 +31,13 @@
         // var header = new HSHeader($('#header')).init();
 
 
-        // INITIALIZATION OF MEGA MENU
+/*        // INITIALIZATION OF MEGA MENU
         // =======================================================
         var megaMenu = new HSMegaMenu($('.js-mega-menu'), {
             desktop: {
                 position: 'left'
             }
-        }).init();
+        }).init();*/
 
 
         // INITIALIZATION OF UNFOLD
@@ -52,7 +52,7 @@
         });
 
 
-        // INITIALIZATION OF FORM VALIDATION
+/*        // INITIALIZATION OF FORM VALIDATION
         // =======================================================
         $('.js-validate').each(function() {
             $.HSCore.components.HSValidation.init($(this), {
@@ -62,8 +62,7 @@
                     }
                 }
             });
-        });
-
+        });*/
 
         // INITIALIZATION OF CUBEPORTFOLIO
         // =======================================================
