--- a/src/main/resources/templates/fragments/secondaryContents.html
+++ b/src/main/resources/templates/fragments/secondaryContents.html
@@ -6,10 +6,10 @@
 
 <!-- ========== SECONDARY CONTENTS ========== -->
 <!-- Sign Up Modal -->
-<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-hidden="true">
+<!--<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <!-- Header -->
+            &lt;!&ndash; Header &ndash;&gt;
             <div class="modal-close">
                 <button type="button" class="btn btn-icon btn-sm btn-ghost-secondary" data-dismiss="modal" aria-label="Close">
                     <svg width="10" height="10" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
@@ -17,12 +17,12 @@
                     </svg>
                 </button>
             </div>
-            <!-- End Header -->
+            &lt;!&ndash; End Header &ndash;&gt;
 
-            <!-- Body -->
+            &lt;!&ndash; Body &ndash;&gt;
             <div class="modal-body p-sm-5">
                 <form class="js-validate">
-                    <!-- Sign in -->
+                    &lt;!&ndash; Sign in &ndash;&gt;
                     <div id="signinModalForm">
                         <div class="text-center mb-5">
                             <h2>Sign in</h2>
@@ -48,9 +48,9 @@
                      "groupName": "idForm"
                    }'>Sign in with Email</a>
                     </div>
-                    <!-- End Sign in -->
+                    &lt;!&ndash; End Sign in &ndash;&gt;
 
-                    <!-- Sign in with Modal -->
+                    &lt;!&ndash; Sign in with Modal &ndash;&gt;
                     <div id="signinWithEmailModalForm" style="display: none; opacity: 0;">
                         <div class="text-center mb-5">
                             <h2>Sign in</h2>
@@ -63,14 +63,14 @@
                             </p>
                         </div>
 
-                        <!-- Form Group -->
+                        &lt;!&ndash; Form Group &ndash;&gt;
                         <div class="js-form-message form-group">
                             <label class="input-label" for="signinModalFormSrEmail">Your email</label>
                             <input type="email" class="form-control" name="email" id="signinModalFormSrEmail" placeholder="email@address.com" aria-label="email@address.com" required data-msg="Please enter a valid email address.">
                         </div>
-                        <!-- End Form Group -->
+                        &lt;!&ndash; End Form Group &ndash;&gt;
 
-                        <!-- Form Group -->
+                        &lt;!&ndash; Form Group &ndash;&gt;
                         <div class="js-form-message form-group">
                             <label class="input-label" for="signinModalFormSrPassword">
                     <span class="d-flex justify-content-between align-items-center">
@@ -84,13 +84,13 @@
                             </label>
                             <input type="password" class="form-control" name="password" id="signinModalFormSrPassword" placeholder="8+ characters required" aria-label="8+ characters required" required data-msg="Your password is invalid. Please try again.">
                         </div>
-                        <!-- End Form Group -->
+                        &lt;!&ndash; End Form Group &ndash;&gt;
 
                         <button type="submit" class="btn btn-block btn-primary">Sign in</button>
                     </div>
-                    <!-- End Sign in with Modal -->
+                    &lt;!&ndash; End Sign in with Modal &ndash;&gt;
 
-                    <!-- Sign up -->
+                    &lt;!&ndash; Sign up &ndash;&gt;
                     <div id="signupModalForm" style="display: none; opacity: 0;">
                         <div class="text-center mb-5">
                             <h2>Sign up</h2>
@@ -120,9 +120,9 @@
                             <p class="font-size-1 mb-0">By continuing you agree to our <a href="#">Terms and Conditions</a></p>
                         </div>
                     </div>
-                    <!-- End Sign up -->
+                    &lt;!&ndash; End Sign up &ndash;&gt;
 
-                    <!-- Sign up with Modal -->
+                    &lt;!&ndash; Sign up with Modal &ndash;&gt;
                     <div id="signupWithEmailModalForm" style="display: none; opacity: 0;">
                         <div class="text-center mb-5">
                             <h2>Sign up</h2>
@@ -135,26 +135,26 @@
                             </p>
                         </div>
 
-                        <!-- Form Group -->
+                        &lt;!&ndash; Form Group &ndash;&gt;
                         <div class="js-form-message form-group">
                             <label class="input-label" for="signupModalFormSrEmail">Your email</label>
                             <input type="email" class="form-control" name="email" id="signupModalFormSrEmail" placeholder="email@address.com" aria-label="email@address.com" required data-msg="Please enter a valid email address.">
                         </div>
-                        <!-- End Form Group -->
+                        &lt;!&ndash; End Form Group &ndash;&gt;
 
-                        <!-- Form Group -->
+                        &lt;!&ndash; Form Group &ndash;&gt;
                         <div class="js-form-message form-group">
                             <label class="input-label" for="signupModalFormSrPassword">Password</label>
                             <input type="password" class="form-control" name="password" id="signupModalFormSrPassword" placeholder="8+ characters required" aria-label="8+ characters required" required data-msg="Your password is invalid. Please try again.">
                         </div>
-                        <!-- End Form Group -->
+                        &lt;!&ndash; End Form Group &ndash;&gt;
 
-                        <!-- Form Group -->
+                        &lt;!&ndash; Form Group &ndash;&gt;
                         <div class="js-form-message form-group">
                             <label class="input-label" for="signupModalFormSrConfirmPassword">Confirm password</label>
                             <input type="password" class="form-control" name="confirmPassword" id="signupModalFormSrConfirmPassword" placeholder="8+ characters required" aria-label="8+ characters required" required data-msg="Password does not match the confirm password.">
                         </div>
-                        <!-- End Form Group -->
+                        &lt;!&ndash; End Form Group &ndash;&gt;
 
                         <button type="submit" class="btn btn-block btn-primary">Sign up</button>
 
@@ -162,16 +162,16 @@
                             <p class="font-size-1 mb-0">By continuing you agree to our <a href="#">Terms and Conditions</a></p>
                         </div>
                     </div>
-                    <!-- End Sign up with Modal -->
+                    &lt;!&ndash; End Sign up with Modal &ndash;&gt;
 
-                    <!-- Forgot Password -->
+                    &lt;!&ndash; Forgot Password &ndash;&gt;
                     <div id="forgotPasswordModalForm" style="display: none; opacity: 0;">
                         <div class="text-center mb-5">
                             <h2>Forgot password?</h2>
                             <p>Enter the email address you used when you joined and we'll send you instructions to reset your password.</p>
                         </div>
 
-                        <!-- Form Group -->
+                        &lt;!&ndash; Form Group &ndash;&gt;
                         <div class="js-form-message form-group">
                             <label class="input-label" for="resetPasswordSrEmail" tabindex="0">
                   <span class="d-flex justify-content-between align-items-center">
@@ -187,16 +187,16 @@
                             </label>
                             <input type="email" class="form-control" name="email" id="resetPasswordSrEmail" tabindex="1" placeholder="Enter your email address" aria-label="Enter your email address" required data-msg="Please enter a valid email address.">
                         </div>
-                        <!-- End Form Group -->
+                        &lt;!&ndash; End Form Group &ndash;&gt;
 
                         <button type="submit" class="btn btn-block btn-primary">Submit</button>
                     </div>
-                    <!-- End Forgot Password -->
+                    &lt;!&ndash; End Forgot Password &ndash;&gt;
                 </form>
             </div>
-            <!-- End Body -->
+            &lt;!&ndash; End Body &ndash;&gt;
 
-            <!-- Footer -->
+            &lt;!&ndash; Footer &ndash;&gt;
             <div class="modal-footer d-block text-center py-sm-5">
                 <small class="text-cap mb-4">Trusted by the world's best teams</small>
 
@@ -217,10 +217,10 @@
                     </div>
                 </div>
             </div>
-            <!-- End Footer -->
+            &lt;!&ndash; End Footer &ndash;&gt;
         </div>
     </div>
-</div>
+</div>-->
 <!-- End Sign Up Modal -->
 <!-- ========== END SECONDARY CONTENTS ========== -->
 
