--- a/src/main/resources/templates/portfolio-own.html
+++ b/src/main/resources/templates/portfolio-own.html
@@ -4,7 +4,7 @@
   <!-- ========== HEAD ========== -->
 
   <!-- Title -->
-  <title>Portfolio - Boxed Card | Front - Responsive Website Template</title>
+  <title>Pixelheaven.org</title>
   <!-- Required Meta Tags Always Come First -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
