--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,7 +4,7 @@
 
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./favicon.ico">
+<!--    <link rel="shortcut icon" href="./favicon.ico">-->
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
