--- a/src/main/resources/templates/fragments/imageList.html
+++ b/src/main/resources/templates/fragments/imageList.html
@@ -64,7 +64,7 @@
                         <div class="cbp-caption-defaultWrap">
                             <a th:attr="data-imagename=${imageObject.filename}" title="Add this item" class="open-ShowImageModal" href="#myModal">
                                 <img src="" th:width="400px" th:height="500px"
-                                     th:src="@{https:/d2700iz682jtyp.cloudfront.net/thumbnails/{imageName}.jpg (imageName=${imageObject.filename})}"
+                                     th:src="@{https://d2700iz682jtyp.cloudfront.net/thumbnails/{imageName}.jpg (imageName=${imageObject.filename})}"
                                      alt="Image Description" loading="lazy">
 
                             </a>
